--- a/index.html
+++ b/index.html
@@ -1,21 +1,52 @@
-<html>
-    <head>
-        <title>
-            Hellow World! Eu sou a cabeça
-        </title>
-    </head>
-    <body>
-        <h1> Eu sou o corpo </h1>
-        <h2> Eu sou o corpo </h2>
-    </body>
-    <ol>
-        <li>Cafe</li>
-        <li>Cerveja </li>
-        <li>Agua</li>
-    </ol>
-    <ul>
-        <li>Cafe</li>
-        <li>Cerveja </li>
-        <li>Agua</li>
-    </ul>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>João Gabriel Atilio CV</title>
+
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <main class="resume-contents">
+        <section class="left-section">
+            <div class="left-section-contents">
+                <div class="profile">
+                    <img class="profile-image" src="img/profile-image.jpeg" alt="Profile image">
+                    <p class="name">João Gabriel Atilio</p>
+                    <p class="profession">Software Engineer</p>
+                </div>
+                <div class="contact-info">
+                    <p class="left-title">Contato</p>
+                    <ul>
+                        <li><i class="fa fa-phone"></i>+55 15 99999-1111</li>
+                        <li><i class="fa fa-envelope"></i>joaoatilio@gmail.com</li>
+                        <li><i class="fa fa-globe"></i>www.joaoatilio.com</li>
+                        <li><i class="fa fa-github"></i>JoaoAtilio</li>
+                    </ul>
+                </div>
+                <div class="skills">
+                    <p class="left-title">Skills</p>
+                    <ul>
+                        <li><p>HTML, CSS, Git & GitHub</p></li>
+                        <li><p>JavaScript, C</p></li>
+                        <li><p>Windows</p></li>
+                    </ul>
+                </div>
+         </section>
+            <section class="right-section">
+                <div class="right-section-contents">
+                    <section class="about gap">
+                        <div class="right-title"> Sobre Mim</div>
+                        <p class="about-me-contents">
+                            Olá meu nome é João <br>
+                            <br> Sou jovem aprendiz na empresa Tereos e estudante de Analise e desenvolvimento de sistemas
+                            <br> Minhas competencias
+                        </p>
+                    </section>
+                </div>
+            </section>
+    </main>
+</body>
 </html>
