Adicionando empresas e experiencia

--- a/index.html
+++ b/index.html
@@ -46,6 +46,36 @@
                         </p>
                     </section>
                 </div>
+            <section class="experience gap">
+                <div class="right-title">Experiencia</div>
+                <div class="experience-contents">
+                    <div class="exp-left">
+                        <p class="exp-company-name">Tereos</p>
+                        <p class="exp-time-period">2022-Presente</p>
+                    </div>
+                    <div class="exp-right">
+                        <p class="exp-position">Jovem Aprendiz</p>
+                        <p class="exp-desc">
+                            Sistema SAP (Requisiçoes de compra, serviço, reserva de materiais).
+                            <br>Abertura de Ordens de serviço de vinhaça, herbicida e corretivo de solo. 
+                            <br>Correção de ponto dos colaboradores da agricola. 
+                            <br>Controle de estoque nos departamentos e no campo. 
+                            <br>Abertura de chamados para resolução de ocorrências.
+                        </p>
+                    </div>
+                    <div class="exp-left">
+                        <p class="exp-company-name">Real Contabilidade</p>
+                        <p class="exp-time-period">2022-2022</p>
+                    </div>
+                    <div class="exp-right">
+                        <p class="exp-position">Office-boy</p>
+                        <p class="exp-desc">
+                            Entregas de honorários e documentos fiscais de contabilidade.
+                            <br> Organização de documentos trabalhistas do RH.
+                        </p>
+                    </div>
+                </div>
+            </section>
             </section>
     </main>
 </body>
