--- a/index.html
+++ b/index.html
@@ -76,6 +76,26 @@
                     </div>
                 </div>
             </section>
+            <section class="education gap">
+                <div class="right-title">Formação Academica</div>
+                <div class="education-contents">
+                    <div class="education-left">
+                        <p class="education-school-name">UNIP</p>
+                        <p class="educationp-time-period">2022-atualmente</p>
+                    </div>
+                    <div class="education-right">
+                        <p class="education-subject">Análise e Desenvolvimento de Sistemas</p>
+                        <p class="education-desc">
+                            Graduação em Análise e Desenvolvimentos de Sistemas
+                        </p>
+
+                    </div>
+                </div>
+                
+
+
+            </section>
+
             </section>
     </main>
 </body>
