Adicionando cursos e cerficidados

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,6 +9,7 @@
 
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <main class="resume-contents">
         <section class="left-section">
@@ -29,23 +31,29 @@
                 <div class="skills">
                     <p class="left-title">Skills</p>
                     <ul>
-                        <li><p>HTML, CSS, Git & GitHub</p></li>
-                        <li><p>JavaScript, C</p></li>
-                        <li><p>Windows</p></li>
+                        <li>
+                            <p>HTML, CSS, Git & GitHub</p>
+                        </li>
+                        <li>
+                            <p>JavaScript, C</p>
+                        </li>
+                        <li>
+                            <p>Windows</p>
+                        </li>
                     </ul>
                 </div>
-         </section>
-            <section class="right-section">
-                <div class="right-section-contents">
-                    <section class="about gap">
-                        <div class="right-title"> Sobre Mim</div>
-                        <p class="about-me-contents">
-                            Olá meu nome é João <br>
-                            <br> Sou jovem aprendiz na empresa Tereos e estudante de Analise e desenvolvimento de sistemas
-                            <br> Minhas competencias
-                        </p>
-                    </section>
-                </div>
+        </section>
+        <section class="right-section">
+            <div class="right-section-contents">
+                <section class="about gap">
+                    <div class="right-title"> Sobre Mim</div>
+                    <p class="about-me-contents">
+                        Olá meu nome é João <br>
+                        <br> Sou jovem aprendiz na empresa Tereos e estudante de Analise e desenvolvimento de sistemas
+                        <br> Minhas competencias
+                    </p>
+                </section>
+            </div>
             <section class="experience gap">
                 <div class="right-title">Experiencia</div>
                 <div class="experience-contents">
@@ -57,9 +65,9 @@
                         <p class="exp-position">Jovem Aprendiz</p>
                         <p class="exp-desc">
                             Sistema SAP (Requisiçoes de compra, serviço, reserva de materiais).
-                            <br>Abertura de Ordens de serviço de vinhaça, herbicida e corretivo de solo. 
-                            <br>Correção de ponto dos colaboradores da agricola. 
-                            <br>Controle de estoque nos departamentos e no campo. 
+                            <br>Abertura de Ordens de serviço de vinhaça, herbicida e corretivo de solo.
+                            <br>Correção de ponto dos colaboradores da agricola.
+                            <br>Controle de estoque nos departamentos e no campo.
                             <br>Abertura de chamados para resolução de ocorrências.
                         </p>
                     </div>
@@ -91,12 +99,27 @@
 
                     </div>
                 </div>
-                
-
 
             </section>
+            <section class="awards gap">
+                <div class="right-title">Cursos</div>
+                <div class="awards-contents">
+                    <div class="awards-left">
+                    <p class="awards-company-name">EBAC</p>
+                    <p class="awaards-time-period">Novembro de 2022</p>
+                </div>
+                <div class="awards-right">
+                    <p class="awards-name">Curso de Front-End</p>
+                    <p class="awards-desc">
+                        Curso feito na EBAC no ano de 2022
+                    </p>
+                </div>
 
+                </div>
             </section>
+
+        </section>
     </main>
 </body>
+
 </html>
