Adicionando mais estilos no css e informações

--- a/index.html
+++ b/index.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>João Gabriel Atilio CV</title>
+    <title>Joao Atilio CV</title>
 
+    <!-- Google font  -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,700;1,100;1,300;1,400;1,700&display=swap" rel="stylesheet">
+
+    <!-- font-awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+    <!-- Custom CSS -->
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -17,7 +25,7 @@
                 <div class="profile">
                     <img class="profile-image" src="img/profile-image.jpeg" alt="Profile image">
                     <p class="name">João Gabriel Atilio</p>
-                    <p class="profession">Software Engineer</p>
+                    <p class="profession">Jovem Aprendiz - ADM</p>
                 </div>
                 <div class="contact-info">
                     <p class="left-title">Contato</p>
@@ -35,7 +43,7 @@
                             <p>HTML, CSS, Git & GitHub</p>
                         </li>
                         <li>
-                            <p>JavaScript, C</p>
+                            <p>JavaScript, C, SAP</p>
                         </li>
                         <li>
                             <p>Windows</p>
@@ -49,11 +57,12 @@
                     <div class="right-title"> Sobre Mim</div>
                     <p class="about-me-contents">
                         Olá meu nome é João <br>
-                        <br> Sou jovem aprendiz na empresa Tereos e estudante de Analise e desenvolvimento de sistemas
-                        <br> Minhas competencias
+                        <br> Sou jovem aprendiz na empresa Tereos e estudante de Analise e desenvolvimento de sistemas, possuo uma boa comunicação e agilidade para realizar as tarefas. Estou sempre em busca do aprendizado e da experiência para me tornar um grande profissional na área de desenvolvimento de software, 
+                        agregando valor e evoluindo junto com a empresa. Tenho experiência em desenvolvimento web, Sistemas SAP e EXCEL.
+                    
                     </p>
                 </section>
-            </div>
+            
             <section class="experience gap">
                 <div class="right-title">Experiencia</div>
                 <div class="experience-contents">
@@ -109,15 +118,15 @@
                     <p class="awaards-time-period">Novembro de 2022</p>
                 </div>
                 <div class="awards-right">
-                    <p class="awards-name">Curso de Front-End</p>
+                    <p class="awards-name">Jornada Dev</p>
                     <p class="awards-desc">
-                        Curso feito na EBAC no ano de 2022
+                        Jornada de desenvolvimento HTML e CSS
                     </p>
                 </div>
 
                 </div>
             </section>
-
+        </div>
         </section>
     </main>
 </body>
