Atualização geral curriculo

--- a/index.html
+++ b/index.html
@@ -1,134 +1,232 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Joao Atilio CV</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Joao Gabriel CV</title>
 
     <!-- Google font  -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,700;1,100;1,300;1,400;1,700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;800&display=swap"
+      rel="stylesheet"
+    />
 
     <!-- font-awesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
 
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="style.css">
-</head>
+    <link rel="stylesheet" href="style.css" />
+  </head>
 
-<body>
+  <body>
     <main class="resume-contents">
-        <section class="left-section">
-            <div class="left-section-contents">
-                <div class="profile">
-                    <img class="profile-image" src="img/profile-image.jpeg" alt="Profile image">
-                    <p class="name">João Gabriel Atilio</p>
-                    <p class="profession">Jovem Aprendiz - ADM</p>
-                </div>
-                <div class="contact-info">
-                    <p class="left-title">Contato</p>
-                    <ul>
-                        <li><i class="fa fa-phone"></i>+55 15 99999-1111</li>
-                        <li><i class="fa fa-envelope"></i>joaoatilio@gmail.com</li>
-                        <li><i class="fa fa-globe"></i>www.joaoatilio.com</li>
-                        <li><i class="fa fa-github"></i>JoaoAtilio</li>
-                    </ul>
-                </div>
-                <div class="skills">
-                    <p class="left-title">Skills</p>
-                    <ul>
-                        <li>
-                            <p>HTML, CSS, Git & GitHub</p>
-                        </li>
-                        <li>
-                            <p>JavaScript, C, SAP</p>
-                        </li>
-                        <li>
-                            <p>Windows</p>
-                        </li>
-                    </ul>
-                </div>
-        </section>
-        <section class="right-section">
-            <div class="right-section-contents">
-                <section class="about gap">
-                    <div class="right-title"> Sobre Mim</div>
-                    <p class="about-me-contents">
-                        Olá meu nome é João <br>
-                        <br> Sou jovem aprendiz na empresa Tereos e estudante de Analise e desenvolvimento de sistemas, possuo uma boa comunicação e agilidade para realizar as tarefas. Estou sempre em busca do aprendizado e da experiência para me tornar um grande profissional na área de desenvolvimento de software, 
-                        agregando valor e evoluindo junto com a empresa. Tenho experiência em desenvolvimento web, Sistemas SAP e EXCEL.
-                    
-                    </p>
-                </section>
-            
-            <section class="experience gap">
-                <div class="right-title">Experiencia</div>
-                <div class="experience-contents">
-                    <div class="exp-left">
-                        <p class="exp-company-name">Tereos</p>
-                        <p class="exp-time-period">2022-Presente</p>
-                    </div>
-                    <div class="exp-right">
-                        <p class="exp-position">Jovem Aprendiz</p>
-                        <p class="exp-desc">
-                            Sistema SAP (Requisiçoes de compra, serviço, reserva de materiais).
-                            <br>Abertura de Ordens de serviço de vinhaça, herbicida e corretivo de solo.
-                            <br>Correção de ponto dos colaboradores da agricola.
-                            <br>Controle de estoque nos departamentos e no campo.
-                            <br>Abertura de chamados para resolução de ocorrências.
-                        </p>
-                    </div>
-                    <div class="exp-left">
-                        <p class="exp-company-name">Real Contabilidade</p>
-                        <p class="exp-time-period">2022-2022</p>
-                    </div>
-                    <div class="exp-right">
-                        <p class="exp-position">Office-boy</p>
-                        <p class="exp-desc">
-                            Entregas de honorários e documentos fiscais de contabilidade.
-                            <br> Organização de documentos trabalhistas do RH.
-                        </p>
-                    </div>
-                </div>
-            </section>
-            <section class="education gap">
-                <div class="right-title">Formação Academica</div>
-                <div class="education-contents">
-                    <div class="education-left">
-                        <p class="education-school-name">UNIP</p>
-                        <p class="educationp-time-period">2022-atualmente</p>
-                    </div>
-                    <div class="education-right">
-                        <p class="education-subject">Análise e Desenvolvimento de Sistemas</p>
-                        <p class="education-desc">
-                            Graduação em Análise e Desenvolvimentos de Sistemas
-                        </p>
-
-                    </div>
-                </div>
-
-            </section>
-            <section class="awards gap">
-                <div class="right-title">Cursos</div>
-                <div class="awards-contents">
-                    <div class="awards-left">
-                    <p class="awards-company-name">EBAC</p>
-                    <p class="awaards-time-period">Novembro de 2022</p>
-                </div>
-                <div class="awards-right">
-                    <p class="awards-name">Jornada Dev</p>
-                    <p class="awards-desc">
-                        Jornada de desenvolvimento HTML e CSS
-                    </p>
-                </div>
-
-                </div>
-            </section>
+      <div class="container">
+        <div class="bolhas">
+          <span style="--i: 11"></span>
+          <span style="--i: 17"></span>
+          <span style="--i: 25"></span>
+          <span style="--i: 14"></span>
+          <span style="--i: 9"></span>
+          <span style="--i: 2"></span>
+          <span style="--i: 28"></span>
+          <span style="--i: 16"></span>
+          <span style="--i: 22"></span>
+          <span style="--i: 4"></span>
+          <span style="--i: 13"></span>
+          <span style="--i: 27"></span>
+          <span style="--i: 17"></span>
+          <span style="--i: 9"></span>
+          <span style="--i: 15"></span>
+          <span style="--i: 24"></span>
+          <span style="--i: 12"></span>
+          <span style="--i: 26"></span>
+          <span style="--i: 11"></span>
+          <span style="--i: 17"></span>
+          <span style="--i: 25"></span>
+          <span style="--i: 14"></span>
+          <span style="--i: 9"></span>
+          <span style="--i: 2"></span>
+          <span style="--i: 28"></span>
+          <span style="--i: 16"></span>
+          <span style="--i: 22"></span>
+          <span style="--i: 4"></span>
+          <span style="--i: 13"></span>
+          <span style="--i: 27"></span>
+          <span style="--i: 17"></span>
+          <span style="--i: 9"></span>
+          <span style="--i: 15"></span>
+          <span style="--i: 24"></span>
+          <span style="--i: 12"></span>
+          <span style="--i: 26"></span>
+          <span style="--i: 2"></span>
+          <span style="--i: 28"></span>
+          <span style="--i: 16"></span>
         </div>
-        </section>
-    </main>
-</body>
+      </div>
+      <!-- Lado esquerdo do currículo -->
+      <section class="left-section">
+        <section class="left-section-content">
+          <div class="profile">
+            <img
+              src="img/profile-image.jpeg.png"
+              alt="Profile image"
+              class="profile-image"
+            />
+            <p class="name">João Gabriel Atílio</p>
+            <p class="profession">Assistente Administrativo</p>
+          </div>
+          <div class="contact-info">
+            <p class="left-title">Contato</p>
+            <ul>
+              <li><i class="fa fa-phone"></i>+55 16 99755-5572</li>
+              <li><i class="fa fa-envelope"></i>atiliogabrieljoao@gmail.com</li>
+              <li>
+                <i class="fa fa-linkedin"></i>
+                <a
+                  href="https://www.linkedin.com/in/joaogatilio/"
+                  target="_blank"
+                  class="configuration-link"
+                  >João Gabriel Atilio</a
+                >
+              </li>
 
+              <li>
+                <i class="fa fa-github"></i>
+                <a
+                  href="https://github.com/JoaoAtilio"
+                  target="_blank"
+                  class="configuration-link"
+                  >JoaoAtilio</a
+                >
+              </li>
+            </ul>
+          </div>
+          <div class="skills">
+            <p class="left-title">Skills</p>
+            <ul>
+              <li>
+                <p>SAP</p>
+              </li>
+              <li>
+                <p>Pacote Office</p>
+              </li>
+              <li>
+                <p>ServiceNow</p>
+              </li>
+              <li>
+                <p>SimpleFarm</p>
+              </li>
+              <li>
+                <p>Javascript</p>
+              </li>
+            </ul>
+          </div>
+          <div class="skills">
+            <p class="left-title">Idiomas</p>
+            <ul>
+              <li>
+                <p>Português (Nativo)</p>
+              </li>
+              <li>
+                <p>Inglês (Intermediário)</p>
+              </li>
+            </ul>
+          </div>
+        </section>
+      </section>
+      <!-- Lado direito do currículo -->
+      <section class="right-section">
+        <div class="right-section-contents">
+          <section class="about-gap">
+            <div class="right-title">Sobre Mim</div>
+            <p class="about-me-contents">
+              Olá, eu me chamo João Gabriel Atílio. <br />
+              <br />
+              Atualmente sou Assistente Administrativo de Tratos Culturais na
+              Tereos Unidade Andrade, possuo experiência na gestão de insumos
+              agrícolas, realizo abertura de ordens de serviço, chamados e
+              correção de ponto dos colaboradores do setor de Tratos Culturais.
+              Além disso, sou estudante de Análise e Desenvolvimento de Sistema
+              em busca de oportunidade na área de tecnologia. Possuo
+              conhecimento em desenvolvimento web, linguagens de programação
+              como C#, javascript e banco de dados MySQL e PostgreSQL
+            </p>
+          </section>
+          <section class="experience gap">
+            <div class="right-title">Experiência</div>
+            <div class="experience-contents">
+              <div class="exp-left">
+                <p class="exp-company-name">Tereos</p>
+                <p class="exp-time-period">2022-Presente</p>
+              </div>
+              <div class="exp-right">
+                <p class="exp-position">Assistente Administrativo</p>
+                <p class="exp-desc">
+                  Trabalho como assistente administrativo, faço o controle de
+                  insumos agrícolas usando SAP, utilizo o ServiceNow para
+                  realizar a abertura de chamados, correção de ponto e também
+                  realizo análises de dados utilizando PowerBI e Excel.
+                </p>
+              </div>
+              <div class="exp-left">
+                <p class="exp-company-name">Tereos.</p>
+                <p class="exp-time-period">2021-2022</p>
+              </div>
+              <div class="exp-right">
+                <p class="exp-position">Jovem Aprendiz</p>
+                <p class="exp-desc">
+                  Trabalhei como aprendiz auxiliando o setor administrativo de
+                  tratos culturais realizando tarefas como abertura de ordens,
+                  chamados no ServiceNow e requisições de materiais utilizando
+                  SAP
+                </p>
+              </div>
+            </div>
+          </section>
+          <section class="education gap">
+            <div class="right-title">Formação Acadêmica</div>
+            <div class="education-contents">
+              <div class="education-left">
+                <p class="education-school-name">UNIP</p>
+                <p class="educationp-time-period">2022~</p>
+              </div>
+              <div class="education-right">
+                <p class="education-subject">
+                  Análise e Desenvolvimento de Sistemas
+                </p>
+                <p class="education-desc">
+                  Superior técnologo em Análise e Desenvolvimento de Sistemas
+                </p>
+              </div>
+            </div>
+          </section>
+          <section class="awards gap">
+            <div class="right-title">Cursos</div>
+            <div class="awards-contents">
+              <div class="awards-left">
+                <p class="awards-company-name">OneBitCode</p>
+                <p class="awards-time-period">2023-present</p>
+              </div>
+              <div class="awards-right">
+                <p class="awards-name">Desenvolvimento Fullstack Javascript</p>
+                <p class="awards-desc">
+                  Curso intensivo de desenvolvimento de software, onde estou
+                  adquirindo conhecimento em todas as áreas da programação como:
+                  Front-end: React - HTML5 - CSS - Bootstrap.
+                  <br />
+                  Back-end: Javascript -Node - Typescript
+                </p>
+              </div>
+            </div>
+          </section>
+        </div>
+      </section>
+    </main>
+  </body>
 </html>
